--- a/static/css/theme-blue.css
+++ b/static/css/theme-blue.css
@@ -10,12 +10,12 @@
     --MENU-HOME-LINK-color: #323232; /* Color of the home button text */
     --MENU-HOME-LINK-HOVER-color: #5e5e5e; /* Color of the hovered home button text */
 
-    --MENU-HEADER-BG-color:#1C90F3; /* Background color of menu header */
-    --MENU-HEADER-BORDER-color:#33a1ff; /*Color of menu header border */
+    --MENU-HEADER-BG-color:#626669; /* Background color of menu header */
+    --MENU-HEADER-BORDER-color:#d7dde1; /*Color of menu header border */
 
-    --MENU-SEARCH-BG-color:#167ad0; /* Search field background color (by default borders + icons) */
-    --MENU-SEARCH-BOX-color: #33a1ff; /* Override search field border color */
-    --MENU-SEARCH-BOX-ICONS-color: #a1d2fd; /* Override search field icons color */
+    --MENU-SEARCH-BG-color:#c6ccd0; /* Search field background color (by default borders + icons) */
+    --MENU-SEARCH-BOX-color: #c6ccd0; /* Override search field border color */
+    --MENU-SEARCH-BOX-ICONS-color: #23292f; /* Override search field icons color */
 
     --MENU-SECTIONS-ACTIVE-BG-color:#20272b; /* Background color of the active section and its childs */
     --MENU-SECTIONS-BG-color:#252c31; /* Background color of other sections */
