--- a/static/css/theme-blue.css
+++ b/static/css/theme-blue.css
@@ -1,27 +1,27 @@
 
 :root{
 
-    --MAIN-TEXT-color:#323232; /* Color of text by default */
+    --MAIN-TEXT-color:#232226; /* Color of text by default */
     --MAIN-TITLES-TEXT-color: #5e5e5e; /* Color of titles h2-h3-h4-h5 */
     --MAIN-LINK-color:#1C90F3; /* Color of links */
     --MAIN-LINK-HOVER-color:#167ad0; /* Color of hovered links */
-    --MAIN-ANCHOR-color: #1C90F3; /* color of anchors on titles */
+    --MAIN-ANCHOR-color: #4b4955; /* color of anchors on titles */
 
-    --MENU-HOME-LINK-color: #323232; /* Color of the home button text */
-    --MENU-HOME-LINK-HOVER-color: #5e5e5e; /* Color of the hovered home button text */
+    --MENU-HOME-LINK-color: #F7F9FC; /* Color of the home button text */
+    --MENU-HOME-LINK-HOVER-color: #b488e2; /* Color of the hovered home button text */
 
-    --MENU-HEADER-BG-color:#626669; /* Background color of menu header */
-    --MENU-HEADER-BORDER-color:#d7dde1; /*Color of menu header border */
+    --MENU-HEADER-BG-color:#F7F9FC; /* Background color of menu header */
+    --MENU-HEADER-BORDER-color:#312C46; /*Color of menu header border */
 
-    --MENU-SEARCH-BG-color:#c6ccd0; /* Search field background color (by default borders + icons) */
-    --MENU-SEARCH-BOX-color: #c6ccd0; /* Override search field border color */
-    --MENU-SEARCH-BOX-ICONS-color: #23292f; /* Override search field icons color */
+    --MENU-SEARCH-BG-color:#a9a9ab; /* Search field background color (by default borders + icons) */
+    --MENU-SEARCH-BOX-color: #fff; /* Override search field border color */
+    --MENU-SEARCH-BOX-ICONS-color: #fff; /* Override search field icons color */
 
-    --MENU-SECTIONS-ACTIVE-BG-color:#20272b; /* Background color of the active section and its childs */
-    --MENU-SECTIONS-BG-color:#252c31; /* Background color of other sections */
-    --MENU-SECTIONS-LINK-color: #ccc; /* Color of links in menu */
-    --MENU-SECTIONS-LINK-HOVER-color: #e6e6e6;  /* Color of links in menu, when hovered */
-    --MENU-SECTION-ACTIVE-CATEGORY-color: #777; /* Color of active category text */
+    --MENU-SECTIONS-ACTIVE-BG-color:#a9a9ab; /* Background color of the active section and its childs */
+    --MENU-SECTIONS-BG-color:#312c46; /* Background color of other sections */
+    --MENU-SECTIONS-LINK-color: #F7F9FC; /* Color of links in menu */
+    --MENU-SECTIONS-LINK-HOVER-color: #b488e2;  /* Color of links in menu, when hovered */
+    --MENU-SECTION-ACTIVE-CATEGORY-color: #6b6b6d; /* Color of active category text */
     --MENU-SECTION-ACTIVE-CATEGORY-BG-color: #fff; /* Color of background for the active category (only) */
 
     --MENU-VISITED-color: #33a1ff; /* Color of 'page visited' icons in menu */
