--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -38,6 +38,31 @@
     font-weight: 500;
     src: url("../fonts/Work_Sans_500.eot?#iefix") format("embedded-opentype"), url("../fonts/Work_Sans_500.woff") format("woff"), url("../fonts/Work_Sans_500.woff2") format("woff2"), url("../fonts/Work_Sans_500.svg#WorkSans") format("svg"), url("../fonts/Work_Sans_500.ttf") format("truetype");
 }
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 300;
+  src: url("../fonts/RobotoMono-Regular.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/RobotoMono-Bold.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: italic;
+  font-weight: 300;
+  src: url("../fonts/RobotoMono-Italic.ttf") format("truetype");
+}
+@font-face {
+  font-family: 'Roboto Mono';
+  font-style: italic;
+  font-weight: 400;
+  src: url("../fonts/RobotoMono-BoldItalic.ttf") format("truetype");
+}
+
 body {
     background: #fff;
     color: #777;
@@ -448,7 +473,7 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
     margin: 0;
 }
 body {
-    font-family: "Work Sans", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    font-family: "Arial", sans-serif;
     font-weight: 300;
     line-height: 1.6;
     font-size: 18px !important;
@@ -461,9 +486,9 @@ h2, h3, h4, h5, h6 {
     letter-spacing: -1px;
 }
 h1 {
-    font-family: "Novacento Sans Wide", "Helvetica", "Tahoma", "Geneva", "Arial", sans-serif;
+    font-family: "Arial", sans-serif;
     text-align: center;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     color: #222;
     font-weight: 200;
 }
@@ -682,7 +707,7 @@ hr {
 }
 #body-inner .tabs-wrapper.ui-theme-badges .tabs-nav li {
     font-size: 0.9rem;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
 }
 #body-inner .tabs-wrapper.ui-theme-badges .tabs-nav li a {
     background: #35393c;
